@@ -17,3 +17,17 @@ def test_radio_stream_url():
 
     assert len(url) == 1
     assert 'rtmp' in url[0]
+
+
+def test_radio_live_url():
+    url = fetch_stream_url('https://yle.fi/radio/ylepuhe/suora/')
+
+    assert len(url) == 1
+    assert 'manifest.f4m' in url[0]
+
+
+def test_radio_live_url2():
+    url = fetch_stream_url('https://yle.fi/radio/radiosuomi/turku/suora/')
+
+    assert len(url) == 1
+    assert 'manifest.f4m' in url[0]
